--- a/esTest.html
+++ b/esTest.html
@@ -64,7 +64,7 @@
 
 		<!-- Import Manifold -->
 		<script type="module">
-			import { State, RegEl } from "./dist/manifold.es.js";
+			import "dist/manifold.es.js";
 
 			// Initialize test states
 			window.userState = new State({
