--- a/test-async.html
+++ b/test-async.html
@@ -53,7 +53,7 @@
 				<p>Email: ${profile.email}</p>
 				<p>Role: ${profile.role}</p>
 			</div>
-			<div data-else="error" class="error">
+			<div data-catch="error" class="error">
 				Error loading profile: ${error.message}
 			</div>
 		</div>
