--- a/index.html
+++ b/index.html
@@ -65,11 +65,7 @@
 			Counter (aliased as count) is greater than 1 BOI:
 			<span id="counter-display"></span>
 		</div>
-		<div
-			id="test-el-55"
-			data-scope="@counter as count"
-			data-else="@count > 5"
-		>
+		<div id="test-el-55" data-scope="@counter as count" data-else>
 			Counter (aliased as count) is 0 or 1 or something really low:
 			<span id="counter-display"></span>
 		</div>
