--- a/test-async.html
+++ b/test-async.html
@@ -3,223 +3,509 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Async Features Test</title>
+		<title>Manifold Conditional Async Test</title>
 		<style>
 			body {
 				font-family: Arial, sans-serif;
-				max-width: 800px;
-				margin: 0 auto;
-				padding: 20px;
+				margin: 20px;
 			}
 			.test-section {
+				border: 1px solid #ccc;
 				margin: 20px 0;
 				padding: 20px;
-				border: 1px solid #ccc;
-				border-radius: 5px;
+			}
+			.loading {
+				color: blue;
+				font-style: italic;
+			}
+			.success {
+				color: green;
+				font-weight: bold;
+			}
+			.error {
+				color: red;
+				font-weight: bold;
+			}
+			.debug {
+				background: #f0f0f0;
+				padding: 10px;
+				margin: 10px 0;
+				font-family: monospace;
 			}
 			button {
 				padding: 10px 20px;
-				margin: 10px;
+				margin: 5px;
+				background: #007cba;
+				color: white;
+				border: none;
 				cursor: pointer;
 			}
-			.loading {
-				background-color: #f0f8ff;
-				padding: 10px;
-				border-left: 4px solid #007acc;
-			}
-			.result {
-				background-color: #f0fff0;
-				padding: 10px;
-				border-left: 4px solid #28a745;
-			}
-			.error {
-				background-color: #fff5f5;
-				padding: 10px;
-				border-left: 4px solid #dc3545;
+			button:hover {
+				background: #005a87;
 			}
 		</style>
 	</head>
 	<body>
-		<h1>Async Features Test</h1>
+		<h1>Manifold Conditional Async Test</h1>
+		<p>
+			This page tests conditional display of async elements (data-await,
+			data-then, data-catch) and conditional logic (data-if, data-else).
+			Open browser console to see debug logs.
+		</p>
+		<p>
+			<strong>Note:</strong> <code>data-else</code> is now used ONLY for
+			conditional if/else logic. <code>data-catch</code> is used for async
+			error handling.
+		</p>
 
-		<!-- Test 1: Basic data-await with data-then -->
-		<div class="test-section">
-			<h2>Test 1: Basic Async Loading</h2>
-			<div data-await="@fetchUserProfile()" class="loading">
-				Loading user profile...
-			</div>
-			<div data-then="profile" class="result">
-				<h3>${profile.name}</h3>
-				<p>Email: ${profile.email}</p>
-				<p>Role: ${profile.role}</p>
-			</div>
-			<div data-catch="error" class="error">
-				Error loading profile: ${error.message}
-			</div>
-		</div>
-
-		<!-- Test 2: Button with async fetch and processing -->
-		<div class="test-section">
-			<h2>Test 2: Button Click with JSON Processing</h2>
+		<div class="debug">
+			<strong>Debug Test:</strong>
 			<button
-				data-bind="onclick: @fetchUsers"
-				data-process="onclick: response => response.json()"
-				data-then="users"
+				data-bind="onclick: () => console.log('🔥 Simple button click works!')"
 			>
-				Load Users
-			</button>
-			<div data-then="users" class="result">
-				<h3>Users:</h3>
-				<ul>
-					<li data-each="users as user">
-						${user.name} - ${user.email}
-					</li>
-				</ul>
-			</div>
-		</div>
-
-		<!-- Test 3: HTMx-style targeting -->
-		<div class="test-section">
-			<h2>Test 3: HTMx-style Content Targeting</h2>
-			<div id="content-area" class="result">
-				<p>Default content here</p>
-			</div>
-			<button
-				data-bind="onclick: @fetchHtml"
-				data-process="onclick: response => response.text()"
-				data-target="onclick: #content-area"
-			>
-				Refresh Content
+				Test Simple Click
 			</button>
 		</div>
 
-		<!-- Test 4: Multiple async operations -->
+		<div class="debug">
+			<strong>Expected Behavior:</strong>
+			<ul>
+				<li>Initially: Only "Click to test" button visible</li>
+				<li>After click: Only loading message visible</li>
+				<li>
+					After 2 seconds: Only success/error message visible
+					(depending on test)
+				</li>
+				<li>
+					<strong>Issue:</strong> All elements showing simultaneously
+					instead of being conditional
+				</li>
+			</ul>
+		</div>
+
 		<div class="test-section">
-			<h2>Test 4: Multiple Async Operations</h2>
+			<h2>Test 1: Success Case</h2>
+			<!-- Trigger button - separate from async elements -->
+			<button data-bind="onclick: () => testSuccess()">
+				Click to Test Success
+			</button>
+
+			<!-- Loading state - should show during promise -->
 			<div
-				data-await="@fetchInitialData()"
-				data-process="await: response => response.json()"
+				data-await="@successPromise"
+				data-then="result"
 				class="loading"
 			>
-				Loading initial data...
+				⏳ Loading success test... (should be visible only during
+				loading)
 			</div>
-			<div data-then="data" class="result">
-				<h3>Initial Data:</h3>
-				<p>Count: ${data.count}</p>
-				<p>Status: ${data.status}</p>
+
+			<!-- Success state - should show after promise resolves -->
+			<div data-then="result" class="success" style="display: none">
+				✅ Success! Result: ${result}
 			</div>
-			<button
-				data-bind="onclick: @refreshData"
-				data-process="onclick: response => response.json()"
-				data-then="refreshedData"
-			>
-				Refresh Data
+
+			<!-- Error state - should show if promise rejects -->
+			<div data-catch="error" class="error" style="display: none">
+				❌ Error occurred: ${error}
+			</div>
+		</div>
+
+		<div class="test-section">
+			<h2>Test 2: Error Case</h2>
+			<!-- Trigger button - separate from async elements -->
+			<button data-bind="onclick: () => testError()">
+				Click to Test Error
 			</button>
-			<div data-then="refreshedData" class="result">
-				<h3>Refreshed Data:</h3>
-				<p>Count: ${refreshedData.count}</p>
-				<p>Timestamp: ${refreshedData.timestamp}</p>
+
+			<!-- Loading state -->
+			<div
+				data-await="@errorPromise"
+				data-then="result2"
+				data-catch="error2"
+				class="loading"
+			>
+				⏳ Loading error test... (should be visible only during loading)
+			</div>
+
+			<!-- Success state -->
+			<div data-then="result2" class="success" style="display: none">
+				✅ Unexpected success: ${result2}
+			</div>
+
+			<!-- Error state -->
+			<div data-catch="error2" class="error" style="display: none">
+				❌ Expected error: ${error2}
+			</div>
+		</div>
+
+		<div class="test-section">
+			<h2>Test 3: Fast Promise (Immediate Resolution)</h2>
+			<!-- Trigger button - separate from async elements -->
+			<button data-bind="onclick: () => testFast()">
+				Click to Test Fast Promise
+			</button>
+
+			<div
+				data-await="@fastPromise"
+				data-then="fastResult"
+				class="loading"
+			>
+				⚡ Fast loading... (might be too fast to see)
+			</div>
+
+			<div data-then="fastResult" class="success" style="display: none">
+				🚀 Fast result: ${fastResult}
+			</div>
+		</div>
+
+		<div class="test-section">
+			<h2>Test 4: data-process Example</h2>
+			<p>
+				This test demonstrates data-process for transforming promise
+				results
+			</p>
+			<!-- Trigger button -->
+			<button data-bind="onclick: () => testWithProcessor()">
+				Click to Test data-process
+			</button>
+
+			<!-- Loading state with data-process that transforms the result -->
+			<div
+				data-await="@processPromise"
+				data-then="processedResult"
+				data-process="await: (response) => ({ transformed: response.value * 2, timestamp: new Date().toISOString() })"
+				class="loading"
+			>
+				⚙️ Processing data... (transforming result)
+			</div>
+
+			<!-- Success state showing processed result -->
+			<div
+				data-then="processedResult"
+				class="success"
+				style="display: none"
+			>
+				🔧 Processed result: ${processedResult.transformed} at
+				${processedResult.timestamp}
+			</div>
+		</div>
+
+		<div class="test-section">
+			<h2>Test 5: data-target Example</h2>
+			<p>
+				This test demonstrates data-target for updating external
+				elements
+			</p>
+			<!-- Trigger button -->
+			<button data-bind="onclick: () => testWithTarget()">
+				Click to Test data-target
+			</button>
+
+			<!-- Loading state with data-target that updates #target-display -->
+			<div
+				data-await="@targetPromise"
+				data-then="targetResult"
+				data-target="await: #target-display"
+				class="loading"
+			>
+				🎯 Loading target test... (will update target element)
+			</div>
+
+			<!-- Target element that will be updated -->
+			<div
+				id="target-display"
+				class="success"
+				style="border: 2px dashed #ccc; padding: 10px; margin: 10px 0"
+			>
+				🎯 Target element: Waiting for update...
+			</div>
+
+			<!-- Regular result display -->
+			<div data-then="targetResult" class="success" style="display: none">
+				📊 Regular result: ${targetResult}
+			</div>
+		</div>
+
+		<div class="test-section">
+			<h2>Test 6: Combined data-process + data-target</h2>
+			<p>
+				This test demonstrates both data-process and data-target working
+				together
+			</p>
+			<!-- Trigger button -->
+			<button data-bind="onclick: () => testCombined()">
+				Click to Test Combined Features
+			</button>
+
+			<!-- Loading state with both data-process and data-target -->
+			<div
+				data-await="@combinedPromise"
+				data-then="combinedResult"
+				data-process="await: (response) => `🎉 PROCESSED: ${response.toUpperCase()}`"
+				data-target="await: #combined-target"
+				class="loading"
+			>
+				🔄 Processing and targeting...
+			</div>
+
+			<!-- Target element for combined test -->
+			<div
+				id="combined-target"
+				class="success"
+				style="border: 2px solid #007cba; padding: 15px; margin: 10px 0"
+			>
+				🎯 Combined target: Waiting for processed result...
+			</div>
+
+			<!-- Regular result display -->
+			<div
+				data-then="combinedResult"
+				class="success"
+				style="display: none"
+			>
+				📈 Combined result: ${combinedResult}
+			</div>
+		</div>
+
+		<div class="test-section">
+			<h2>Test 7: Conditional data-else (Non-Async)</h2>
+			<p>
+				This test verifies that data-else still works for regular
+				if/else conditional logic
+			</p>
+
+			<!-- Create a simple state toggle -->
+			<button data-bind="onclick: () => window.toggleCondition()">
+				Toggle Condition
+			</button>
+
+			<!-- Conditional elements -->
+			<div data-if="@showMessage" class="success" style="margin: 10px 0">
+				✅ Condition is TRUE - Message is shown
+			</div>
+
+			<div data-else class="error" style="margin: 10px 0">
+				❌ Condition is FALSE - Else message is shown
 			</div>
 		</div>
 
 		<script type="module">
-			import { $ } from "./src/index.js";
+			import { State } from "./src/State.js";
+			import { RegEl } from "./src/registry.js";
 
-			// Mock API functions
-			window.fetchUserProfile = () => {
-				return new Promise((resolve, reject) => {
+			// Create states for different test promises
+			const successPromise = new State();
+			const errorPromise = new State();
+			const fastPromise = new State();
+			const processPromise = new State();
+			const targetPromise = new State();
+			const combinedPromise = new State();
+
+			// Create state for conditional test
+			const showMessage = new State(true);
+
+			// Register states globally
+			State.register("successPromise", successPromise);
+			State.register("errorPromise", errorPromise);
+			State.register("fastPromise", fastPromise);
+			State.register("processPromise", processPromise);
+			State.register("targetPromise", targetPromise);
+			State.register("combinedPromise", combinedPromise);
+			State.register("showMessage", showMessage);
+
+			// Test functions
+			window.testSuccess = () => {
+				console.log("🚀 Starting success test");
+				const rawPromise = new Promise((resolve) => {
 					setTimeout(() => {
-						if (Math.random() > 0.2) {
-							// 80% success rate
-							resolve(
-								new Response(
-									JSON.stringify({
-										name: "John Doe",
-										email: "john@example.com",
-										role: "Developer",
-									})
-								)
-							);
-						} else {
-							reject(new Error("Failed to fetch user profile"));
-						}
-					}, 1000);
+						console.log("✅ Success promise resolving");
+						resolve({ data: "Success data!" });
+					}, 2000);
 				});
+
+				// Store the raw promise directly
+				window.currentPromise = rawPromise;
+				successPromise.value = rawPromise;
 			};
 
-			window.fetchUsers = () => {
-				return new Promise((resolve) => {
+			window.testError = () => {
+				console.log("🚀 Starting error test");
+				const rawPromise = new Promise((resolve, reject) => {
 					setTimeout(() => {
-						resolve(
-							new Response(
-								JSON.stringify([
-									{
-										name: "Alice Smith",
-										email: "alice@example.com",
-									},
-									{
-										name: "Bob Johnson",
-										email: "bob@example.com",
-									},
-									{
-										name: "Carol Brown",
-										email: "carol@example.com",
-									},
-								])
-							)
+						console.log("❌ Error promise rejecting");
+						reject(new Error("Test error message"));
+					}, 2000);
+				});
+
+				// Store the raw promise directly
+				window.currentPromise = rawPromise;
+				errorPromise.value = rawPromise;
+			};
+
+			window.testFast = () => {
+				console.log("🚀 Starting fast test");
+				const rawPromise = Promise.resolve("Immediate result");
+
+				// Store the raw promise directly
+				window.currentPromise = rawPromise;
+				fastPromise.value = rawPromise;
+			};
+
+			// Test function for data-process
+			window.testWithProcessor = () => {
+				console.log("🚀 Starting data-process test");
+				const rawPromise = new Promise((resolve) => {
+					setTimeout(() => {
+						console.log("🔧 Process promise resolving");
+						resolve({ value: 42 });
+					}, 1500);
+				});
+
+				window.currentPromise = rawPromise;
+				processPromise.value = rawPromise;
+			};
+
+			// Test function for data-target
+			window.testWithTarget = () => {
+				console.log("🚀 Starting data-target test");
+				const rawPromise = new Promise((resolve) => {
+					setTimeout(() => {
+						console.log("🎯 Target promise resolving");
+						resolve("Data sent to target!");
+					}, 1500);
+				});
+
+				window.currentPromise = rawPromise;
+				targetPromise.value = rawPromise;
+			};
+
+			// Test function for combined data-process + data-target
+			window.testCombined = () => {
+				console.log("🚀 Starting combined test");
+				const rawPromise = new Promise((resolve) => {
+					setTimeout(() => {
+						console.log("🎉 Combined promise resolving");
+						resolve("hello world");
+					}, 2000);
+				});
+
+				window.currentPromise = rawPromise;
+				combinedPromise.value = rawPromise;
+			};
+
+			// Test function for conditional toggle
+			window.toggleCondition = () => {
+				console.log(
+					"🔄 Toggling condition from",
+					showMessage.value,
+					"to",
+					!showMessage.value
+				);
+				showMessage.value = !showMessage.value;
+			};
+
+			// Register all elements after page load
+			document.addEventListener("DOMContentLoaded", () => {
+				console.log("📋 Registering all Manifold elements...");
+
+				// Register conditional elements in order: if -> elseif -> else
+				document.querySelectorAll("[data-if]").forEach((element) => {
+					console.log("Registering data-if element:", element);
+					RegEl.register(element);
+				});
+
+				document
+					.querySelectorAll("[data-elseif]")
+					.forEach((element) => {
+						console.log(
+							"Registering data-elseif element:",
+							element
 						);
-					}, 800);
+						RegEl.register(element);
+					});
+
+				document.querySelectorAll("[data-else]").forEach((element) => {
+					console.log("Registering data-else element:", element);
+					RegEl.register(element);
 				});
+
+				// Register all other elements
+				document
+					.querySelectorAll(
+						"[data-bind], [data-await], [data-then], [data-catch], [data-process], [data-target]"
+					)
+					.forEach((element) => {
+						console.log("Registering other element:", element);
+						RegEl.register(element);
+					});
+				console.log("✅ All elements registered");
+
+				// Debug: Check if test functions are available
+				console.log("🔍 Test functions available:");
+				console.log("testSuccess:", typeof window.testSuccess);
+				console.log("testError:", typeof window.testError);
+				console.log("testFast:", typeof window.testFast);
+				console.log(
+					"testWithProcessor:",
+					typeof window.testWithProcessor
+				);
+				console.log("testWithTarget:", typeof window.testWithTarget);
+				console.log("testCombined:", typeof window.testCombined);
+				console.log("toggleCondition:", typeof window.toggleCondition);
+			});
+
+			// Debug helper to inspect element states
+			window.debugElements = () => {
+				const awaitElements = document.querySelectorAll("[data-await]");
+				const thenElements = document.querySelectorAll("[data-then]");
+				const elseElements = document.querySelectorAll("[data-else]");
+				const catchElements = document.querySelectorAll("[data-catch]");
+
+				console.group("🔍 Element Debug Info");
+				console.log(
+					"Await elements:",
+					awaitElements.length,
+					Array.from(awaitElements).map((el) => ({
+						element: el,
+						display: el.style.display,
+						dataset: el.dataset,
+					}))
+				);
+				console.log(
+					"Then elements:",
+					thenElements.length,
+					Array.from(thenElements).map((el) => ({
+						element: el,
+						display: el.style.display,
+						dataset: el.dataset,
+					}))
+				);
+				console.log(
+					"Else elements (conditional):",
+					elseElements.length,
+					Array.from(elseElements).map((el) => ({
+						element: el,
+						display: el.style.display,
+						dataset: el.dataset,
+					}))
+				);
+				console.log(
+					"Catch elements (async errors):",
+					catchElements.length,
+					Array.from(catchElements).map((el) => ({
+						element: el,
+						display: el.style.display,
+						dataset: el.dataset,
+					}))
+				);
+				console.groupEnd();
 			};
 
-			window.fetchHtml = () => {
-				return new Promise((resolve) => {
-					setTimeout(() => {
-						resolve(
-							new Response(`
-                        <h3>Updated Content</h3>
-                        <p>This content was fetched at ${new Date().toLocaleTimeString()}</p>
-                        <p>Random number: ${Math.floor(
-							Math.random() * 1000
-						)}</p>
-                    `)
-						);
-					}, 600);
-				});
-			};
-
-			window.fetchInitialData = () => {
-				return new Promise((resolve) => {
-					setTimeout(() => {
-						resolve(
-							new Response(
-								JSON.stringify({
-									count: 42,
-									status: "initialized",
-								})
-							)
-						);
-					}, 500);
-				});
-			};
-
-			window.refreshData = () => {
-				return new Promise((resolve) => {
-					setTimeout(() => {
-						resolve(
-							new Response(
-								JSON.stringify({
-									count: Math.floor(Math.random() * 100),
-									timestamp: new Date().toISOString(),
-								})
-							)
-						);
-					}, 300);
-				});
-			};
-
-			// Initialize the framework
-			console.log("Starting async tests...");
+			// Make debug function available
+			console.log(
+				"💡 Run debugElements() in console to inspect element states"
+			);
 		</script>
 	</body>
 </html>
