Better working async

--- a/index.html
+++ b/index.html
@@ -51,9 +51,15 @@
 
 		<div class="test-section">
 			<h2>Computed State Example</h2>
-			<p>Demonstrates the new computed() helper function for reactive derived values</p>
+			<p>
+				Demonstrates the new computed() helper function for reactive
+				derived values
+			</p>
 			<div data-bind="textContent: @greeting">${greeting}</div>
-			<p>Try changing the user name or age below to see the greeting update automatically!</p>
+			<p>
+				Try changing the user name or age below to see the greeting
+				update automatically!
+			</p>
 		</div>
 
 		<span id="test-el-2" data-bind="textContent: 'Counter is ' + @counter">
