--- a/ui-api.example.html
+++ b/ui-api.example.html
@@ -33,13 +33,14 @@
 				state.count2 = +v;
 			},
 			loadUser() {
-				// Example async function returning a promise used by data-await
+				// Read reactive deps synchronously so :await tracks them and re-runs when toggled
+				const success = state.asyncToggle; // tracked
+				const id = state.userId; // tracked (will refetch if userId changes before start)
 				return new Promise((resolve, reject) => {
 					setTimeout(() => {
-						if (state.asyncToggle)
-							resolve({ id: state.userId, name: "Ada" });
+						if (success) resolve({ id, name: "Ada" });
 						else reject(new Error("User load failed"));
-					}, 5000);
+					}, 2000);
 				});
 			},
 		}
@@ -87,7 +88,7 @@
 
 	<p :if="count >= 15">Count is 15 or more!</p>
 	<p :elseif="count >= 10">Count is between 10 and 14!</p>
-	<p :elseif="count === 10">Count is 9!</p>
+	<p :elseif="count === 9">Count is 9!</p>
 	<p :else>Count is less than 10!</p>
 
 	<button :onclick="count = count + 1">Increment Count</button>
