Simplify state build

--- a/ui-api.example.html
+++ b/ui-api.example.html
@@ -17,7 +17,7 @@
 
 	// Build once after DOM is ready so auto-registration can bind regions.
 	const init = () => {
-		const { state } = StateBuilder.create(
+		const state = StateBuilder.create(
 			{
 				count: 10,
 				count2: 4,
